# HighBloodPressure

./: .clang-format  .clang-tidy  .clangd  .gitignore  Animation.h  CMakeLists.txt  Chars.h  File.cpp  File.h  Game.cpp  Game.h  Hud.cpp  Hud.h  IText.cpp  IText.h  InteractManager.cpp  InteractManager.h  LICENSE  Renderer.cpp  Renderer.h  Task.h  TestCode.h  Text.cpp  Text.h  TextureManager.cpp  TextureManager.h  Window.cpp  Window.h  core.h  def.cpp  def.h  dev.md  dev.txt  exception.cpp  exception.h  gc.h  hbp.h  includes.h  main.cpp  utils.h  (+2 more)
src/: def.cpp  def.h  hbp.h  includes.h  main.cpp  warnings.h
src/game/: Animation.h  Game.cpp  Game.h
src/game/entity/: Damage.h  Entity.cpp  Entity.h  Player.cpp  Player.h
src/game/world/: Block.h  Location.cpp  Location.h  World.h
src/interact/: InteractManager.cpp  InteractManager.h
src/render/: Renderer.cpp  Renderer.h  TextureManager.cpp  TextureManager.h
src/ui/: Hud.cpp  Hud.h  Window.cpp  Window.h  xWindows.h
src/utils/: Chars.h  File.cpp  File.h  IText.cpp  IText.h  Task.h  TestCode.h  exception.cpp  exception.h  gc.cpp  gc.h  math.h  utils.h
